...
            android:id="@+id/menu_schedule"
            android:enabled="true"
            android:title="Schedule"
            android:icon="@drawable/schedule"/>

    <item
            android:id="@+id/menu_accounting"
            android:enabled="true"
            android:title="Accounting"
            android:icon="@drawable/accounting"/>

    <item
            android:id="@+id/menu_setting"
            android:enabled="true"
            android:title="Setting"
            android:icon="@drawable/setting"/>

</menu>
