...
            android:layout_marginTop="200dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/black"/>

    <EditText
            android:id="@+id/et_email"
            android:layout_below="@id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/black"
...
            android:text="@string/signin_pw"
            android:layout_centerInParent="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>

    <EditText
            android:id="@+id/et_password"
            android:layout_below="@id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textColor="@color/black"
            android:layout_marginRight="50dp"
            android:inputType="textPassword"/>

    <Button
            android:id="@+id/btn_signin_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_centerInParent="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="0dp"
        android:background="@color/main"
            android:text="확인" />
</RelativeLayout>

