<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.MP2019.NDND.circleList.CircleListActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_circle_list__navigation_drawer">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:stretchColumns="0">
        <TableRow>
            <EditText
                android:id = "@+id/ET_searchCircle"
                android:hint = "search circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageButton
                android:id = "@+id/IB_searchCircle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:padding = "0dp"
                android:src="@drawable/searchbutton"
                android:scaleType="fitXY"/>
        </TableRow>
        <View
            android:background="@color/divider"
            android:layout_height="2dp"/>
    </TableLayout>

    <ListView
        android:id = "@+id/LV_searchResult"
        android:divider="@color/divider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:elevation="5px"
        android:background="@color/main">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="My Circle List"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="25sp"
                />
            <ImageButton
                android:id = "@+id/IB_createCircle"
                android:layout_width="35dp"
                android:layout_height="41dp"
                android:layout_gravity="end"
                android:padding="0dp"
                android:src="@drawable/ic_add_black_24dp"
                android:background="@color/main"
                android:scaleType="fitXY"/>
    </LinearLayout>

    <ListView
        android:id = "@+id/LV_myCircleList"
        android:divider="@color/black"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


</LinearLayout>
