...
            android:layout_gravity="right"
            android:text="탈퇴"
            android:background="@color/main_light"/>

    </LinearLayout>
    <ListView
        android:id = "@+id/LV_memberList"
        android:divider="@color/divider"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="0dp"
        android:layout_weight="1.5"/>

...
            android:elevation="5px"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    </LinearLayout>
    <ListView
        android:id = "@+id/LV_requestJoin"
        android:divider="@color/divider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
